# Magnus_Effect

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
shaders/: BG.fs  ball.fs  display_flow.fs  display_stream.fs  display_vel.fs  fade.fs  lbm_boundaries.comp  lbm_collision.comp  lbm_init.comp  lbm_macros.comp  lbm_stream.comp  obstacle_sdf.comp  point.fs  point.vs  quad.vs  seeds_advect.comp  seeds_reset.comp  velocity_field.comp  vis_fullscreen.vert  vis_streams.frag
src/: gl_utils.cpp  gl_utils.hpp  main.cpp
